cbaf 1.16.0 - 2021-10-14
-------------------------

New Features

- Terms updated.





cbaf 1.14.0 - 2021-04-28
-------------------------

New Features

- Heatmaps can now be stored as PDF files.
- Functions now show shorter and more clearer messages.
- Package no longer requires Java Runtime Environment for storing excel files
  and it is compatible with older 32 bit operating systems.
- log z-scores provided by cgdsr are used instead of z-scores.





cbaf 1.12.0 - 2020-10-26
-------------------------

New Features

- Terms are updated. Package can recongize even more cancer studies!
- Improvements for methylation analysis.
- If desired genes are entered as a vector, they are converted to a
  list without returning an error.





cbaf 1.10.0 - 2020-04-08
-------------------------

New Features

- A unified method for increasing the consistency of cancer terms used by
  various functions. This enables easier maintanance and faster inclusion of
  new terms whenever available.
- Terms are updated. Package can recongize even more cancer studies!
- Incluion of additional checkpoint to control the name of requested cancer
  studies.





cbaf 1.8.0 - 2019-10-28
-------------------------

New Features

- Optimization has led obtainOneStudy() and obtainMultipleStudies() functions to
  work faster.

- If an entered cancer has corrupted data or lacks the requested data type,
  obtainMultipleStudies() doesn't return error. That study is automatically
  omitted from results and its name is printed on console.

- AvailableData() function now works more accurately but unfortunately, it is
  generally slower: Due to inconsistancy in the terms that cgdsr uses,
  AvailableData() has to check the availability of the data at two different
  levels.





cbaf 1.6.0 - 2019-04-28
-------------------------

New Features

- heatmapOutput now uses a more accurate algorithm for determining the margins.

- Terms are updated. Package can recongize more cancers!





