@@ -1,7 +1,7 @@
 Package: cbaf
-biocViews: Software, AssayDomain, DNAMethylation, GeneExpression, Transcription, ResearchField, BiomedicalInformatics, ComparativeGenomics, Epigenetics, Genetics, Transcriptomics
+biocViews: Software, AssayDomain, DNAMethylation, GeneExpression, Transcription, Microarray,ResearchField, BiomedicalInformatics, ComparativeGenomics, Epigenetics, Genetics, Transcriptomics
 Title: Automated functions for comparing various omic data from cbioportal.org
-Version: 1.17.0
+Version: 1.17.1
 Authors@R: c(person("Arman", "Shahrisa", role = c("aut", "cre", "cph"),
                      email = "shahrisa.arman@hotmail.com"),
             person("Maryam", "Tahmasebi Birgani", role = "aut",
@@ -10,7 +10,7 @@ Description: This package contains functions that allow analysing and comparing
              omic data across various cancers/cancer subgroups easily. So far, 
              it is compatible with RNA-seq, microRNA-seq, microarray and 
              methylation datasets that are stored on cbioportal.org.
-Depends: R (>= 3.5.0)
+Depends: R (>= 4.1)
 License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
