@@ -26,8 +26,9 @@ standard cancer study name that can be found on cbioportal.org, such as
 \code{"Acute Myeloid Leukemia (TCGA, NEJM 2013)"}.}
 
 \item{desiredTechnique}{a character string that is one of the following
-techniques: \code{"RNA-Seq"}, \code{"microRNA-Seq"}, \code{"microarray.mRNA"}
-, \code{"microarray.microRNA"} or \code{"methylation"}.}
+techniques: \code{"RNA-Seq"}, \code{"RNA-SeqRTN"}, \code{"microRNA-Seq"},
+\code{"microarray.mRNA"}, \code{"microarray.microRNA"} or
+\code{"methylation"}.}
 
 \item{desiredCaseList}{a numeric vector that contains the index of desired
 cancer subgroups, assuming the user knows index of desired subgroups. If not,
@@ -169,8 +170,8 @@ ratio, mean value and median value of samples greather than specific value in
 \tabular{lllll}{
 Package: \tab cbaf \cr
 Type: \tab Package \cr
-Version: \tab 1.15.1 \cr
-Date: \tab 2021-10-14 \cr
+Version: \tab 1.17.1 \cr
+Date: \tab 2022-02-16 \cr
 License: \tab Artistic-2.0 \cr
 }
 }
